fixed some bugs, changed MERGE to VIAMAIL

--- a/textpl/Mahnung1_DE.tex
+++ b/textpl/Mahnung1_DE.tex
@@ -51,7 +51,7 @@ Wir haben Dir Anfang diesen Sommer die Mitgliederrechnung zugesandt. Vermutlich 
 
 \textbf{Wir möchten Dich bitten den ausstehenden Betrag von %Amount% innert 30 Tagen zu überweisen.}
 
-Verwendungszweck: PWBREF=M-2014-%ID%\newline
+Verwendungszweck: \textbf{PWBREF=M-2014-%ID%}\newline
 IBAN: CH83 0900 0000 9164 3699 8\newline
 Bank: Postfinance Bern, Switzerland\newline
 BIC: POFICHBEXXX\newline
