--- a/textpl/Mahnung1_EN.tex
+++ b/textpl/Mahnung1_EN.tex
@@ -47,7 +47,7 @@ On behalf of the newly elected board of Pirates Without Borders I wish you a hap
 
 Please pay using the following Infomation: \newline
 Amount: %Amount% \newline
-Purpose of Transfer: $PWBREF=M-2014-%ID%$ \newline
+Purpose of Transfer: \textbf{PWBREF=M-2014-%ID%} \newline
 IBAN: CH83 0900 0000 9164 3699 8 \newline
 Bank: Postfinance Bern, Switzerland \newline
 BIC: POFICHBEXXX \newline
@@ -55,7 +55,7 @@ Account Number: 91-643699-8 \hfill (only few banks will still require this from 
 
 We recommend to go for a SEPA transaction, if you have that opportunity.
 
-Based on feedback we would like to offer  alternative payment methods in the future. I am currently implementing a payment process through Bitpay and we are open to other suggestions. If you are interested, just write me an answer to pat.maechler@piraten-without-grenzen.org
+Based on feedback we would like to offer  alternative payment methods in the future. I am currently implementing a payment process through Bitpay and we are open to other suggestions. If you are interested, just write me an answer to pat.maechler@pirates-without-borders.org
 
 \begin{wrapfigure}{r}{2.5cm}
   \begin{center}
