--- a/textpl/Neumitglied_DE.tex
+++ b/textpl/Neumitglied_DE.tex
@@ -49,9 +49,9 @@
 
 Als Schatzmeister der Piraten ohne Grenzen freue ich mich dich als Neumitglied in unserem Verein zu begrüssen!
 
-Da du deine Rechte deine als Vereinsmitglied erst mit der Begleichung des Mitgliederbeitrags erhältst, möchte ich Dich bitten \textbf{den Betrag von %Amount% sobald wie möglich zu überweisen}
+Da du deine Rechte deine als Vereinsmitglied erst mit der Begleichung des Mitgliederbeitrags erhältst, möchte ich Dich bitten \textbf{den Betrag von %Amount% sobald wie möglich zu überweisen, damit du als Vollmitglied giltst.}
 
-Verwendungszweck: PWBREF=M-2014-%ID%\newline
+Verwendungszweck: \textbf{PWBREF=M-2014-%ID%}\newline
 IBAN: CH83 0900 0000 9164 3699 8\newline
 Bank: Postfinance Bern, Switzerland\newline
 BIC: POFICHBEXXX\newline
