--- a/textpl/Neumitglied_EN.tex
+++ b/textpl/Neumitglied_EN.tex
@@ -41,11 +41,11 @@
 
 As treasurer of the Pirates without Borders, I am pleased to welcome you as a new member in our association!
 
-Since you only receive your rights as a member solely upon payment of your membership fee, I would like to ask you \textbf{to transfer the amount of %Amount% as soon as possible}.
+Since you only receive your rights as a member solely upon payment of your membership fee, I would like to ask you to \textbf{transfer the amount of %Amount% as soon as possible to become an official full member}.
 
 Please pay using the following Infomation: \newline
 Amount: %Amount% \newline
-Purpose of Transfer: $PWBREF=M-2014-%ID%$ \newline
+Purpose of Transfer: \textbf{PWBREF=M-2014-%ID%} \newline
 IBAN: CH83 0900 0000 9164 3699 8 \newline
 Bank: Postfinance Bern, Switzerland \newline
 BIC: POFICHBEXXX \newline
@@ -53,7 +53,7 @@ Account Number: 91-643699-8 \hfill (only few banks will still require this from 
 
 We recommend to go for a SEPA transaction, if you have that opportunity.
 
-Based on feedback we would like to offer  alternative payment methods in the future. I am currently implementing a payment process through Bitpay and we are open to other suggestions. If you are interested, just write me an answer to pat.maechler@piraten-without-grenzen.org
+Based on feedback we would like to offer  alternative payment methods in the future. I am currently implementing a payment process through Bitpay and we are open to other suggestions. If you are interested, just write me an answer to pat.maechler@pirates-without-borders.org
 
 \begin{wrapfigure}{r}{2.5cm}
   \begin{center}
